--- a/templates/success.html
+++ b/templates/success.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>STT - Translator</title>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<style type="text/css">
 		  .content-box {
@@ -34,16 +36,22 @@
 			<h2 class="content-box-title">Model Performed by Open-ai Whisper</h2><hr><br>
 			<p style="text-align: justify; font-size: 19px;" class="content-box-sub text-left text-start">{{results}}</p> <br><br>
 			{% if results %}
-			 <button type = "button" onclick = "CreateTextFile();">Download Text File</button>
+			 <input id="text" type="text" name="text" value="{{results}}" style="visibility: hidden; display: none;">
+			 <button style="justify-content: center; float: center;" class="btn-info btn-md btn-block" type="button" onclick = "CreateTextFile();">Download Text File</button>
 			{% endif %}
 			</div>
 			</div>
 		</div>
 	</div>
 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js" integrity="sha512-csNcFYJniKjJxRWRV1R7fvnXrycHP6qDR21mgz1ZP55xY5d+aHLfo9/FcGDQLfn2IfngbAHd8LdfsagcCqgTcQ==" crossorigin = "anonymous" referrerpolicy = "no-referrer"> </script>
+
 	<script type="text/javascript">
 		function CreateTextFile() {
-	         var blob = new Blob([results], {
+			 var text = document.getElementById('text').value
+	         var blob = new Blob([text], {
 	            type: "text/plain;charset=utf-8",
 	         });
 	         saveAs(blob, "download-translator-text.txt");
